# wasapi-rs

./: .gitignore  Cargo.toml  README.md  build.rs  build_docs.md  index.md
.github/workflows/: windows-ci.yml
docs/0.1.2/: search-index.js  source-files.js
docs/0.1.2/wasapi/: all.html  constant.PKEY_Device_DeviceDesc.html  constant.PKEY_Device_FriendlyName.html  enum.Direction.html  enum.SampleType.html  enum.ShareMode.html  fn.get_default_device.html  index.html  sidebar-items.js  struct.AudioCaptureClient.html  struct.AudioClient.html  struct.AudioRenderClient.html  struct.Device.html  struct.DeviceCollection.html  struct.Handle.html  struct.WasapiError.html  struct.WaveFormat.html
docs/0.2.0/: search-index.js  settings.html
docs/0.2.0/wasapi/: all.html  enum.Direction.html  enum.DisconnectReason.html  enum.SampleType.html  enum.SessionState.html  enum.ShareMode.html  fn.get_default_device.html  index.html  struct.AudioCaptureClient.html  struct.AudioClient.html  struct.AudioRenderClient.html  struct.AudioSessionControl.html  struct.Device.html  struct.DeviceCollection.html  struct.EventCallbacks.html  struct.Guid.html  struct.Handle.html  struct.WasapiError.html  struct.WaveFormat.html
docs/0.3.0/: search-index.js
docs/0.3.0/wasapi/: all.html  enum.Direction.html  enum.DisconnectReason.html  enum.SampleType.html  enum.SessionState.html  enum.ShareMode.html  fn.get_default_device.html  index.html  sidebar-items.js  struct.AudioCaptureClient.html  struct.AudioClient.html  struct.AudioRenderClient.html  struct.AudioSessionControl.html  struct.Device.html  struct.DeviceCollection.html  struct.EventCallbacks.html  struct.Guid.html  struct.Handle.html  struct.WasapiError.html  struct.WaveFormat.html
docs/0.4.0/: search-index.js  settings.html
docs/0.4.0/wasapi/: all.html  enum.Direction.html  enum.DisconnectReason.html  enum.SampleType.html  enum.SessionState.html  enum.ShareMode.html  fn.get_default_device.html  fn.initialize_mta.html  fn.initialize_sta.html  index.html  sidebar-items.js  struct.AudioCaptureClient.html  struct.AudioClient.html  struct.AudioRenderClient.html  struct.AudioSessionControl.html  struct.Device.html  struct.DeviceCollection.html  struct.EventCallbacks.html  struct.Guid.html  struct.Handle.html  struct.WasapiError.html  struct.WaveFormat.html
docs/0.5.0/: crates.js  search-index.js
docs/0.5.0/wasapi/: enum.Direction.html  enum.DisconnectReason.html  enum.SessionState.html  fn.get_default_device.html  fn.initialize_mta.html  struct.AudioClient.html  struct.AudioRenderClient.html  struct.DeviceCollection.html  struct.Guid.html  struct.WasapiError.html  struct.WaveFormat.html
docs/0.6.0/: search-index.js  settings.html  source-files.js
docs/0.6.0/wasapi/: all.html  enum.Direction.html  enum.DisconnectReason.html  enum.SampleType.html  enum.SessionState.html  enum.ShareMode.html  fn.get_default_device.html  fn.initialize_mta.html  fn.initialize_sta.html  index.html  sidebar-items.js  struct.AudioCaptureClient.html  struct.AudioClient.html  struct.AudioRenderClient.html  struct.AudioSessionControl.html  struct.Device.html  struct.DeviceCollection.html  struct.EventCallbacks.html  struct.Guid.html  (+3 more)
docs/0.7.0/: search-index.js  settings.html  source-files.js
examples/: aec.rs  application_loopback_capture.rs  devices.rs  loopback.rs  playnoise_exclusive.rs  playnoise_exclusive_poll.rs  playsine.rs  playsine_events.rs  playsine_poll.rs  processes.rs  record.rs  record_application.rs  sine_events.rs
src/: api.rs  errors.rs  events.rs  lib.rs  wasapi.rs  waveformat.rs
(+1230 files in other folders)
