[package]
name = "wasapi"
version = "0.7.0"
edition = "2018"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "Bindings for the Wasapi API on Windows"
license = "MIT"
repository = "https://github.com/HEnquist/wasapi-rs"
keywords = ["audio", "sound", "windows", "wasapi"]
categories = ["multimedia::audio", "os::windows-apis"]
readme = "README.md"
documentation = "https://henquist.github.io/wasapi-rs/docs/0.6.0/wasapi/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.26.0"
features = ["Foundation",
            "Win32_Media_Audio", 
            "Win32_Foundation",
            "Win32_Devices_Properties",
            "Win32_UI_Shell_PropertiesSystem",
            "Win32_System_Com",
            "Win32_System_Com_StructuredStorage",
            "Win32_Media_KernelStreaming",
            "Win32_Media_Multimedia",
            "Win32_System_Threading",
            "Win32_Security",
            "std"]

[dependencies]
widestring = "0.4.3"
log = "0.4.14"
windows_macros = "0.26.0"

[dev-dependencies]
simplelog = "0.10.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]