[package]
name = "wasapi"
version = "0.17.0"
edition = "2021"
rust-version = "1.74"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
description = "Bindings for the Wasapi API on Windows"
license = "MIT"
repository = "https://github.com/HEnquist/wasapi-rs"
keywords = ["audio", "sound", "windows", "wasapi"]
categories = ["multimedia::audio", "os::windows-apis"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.61"
features = ["Foundation",
            "Win32_Media_Audio",
            "Win32_Foundation",
            "Win32_Devices_FunctionDiscovery",
            "Win32_Devices_Properties",
            "Win32_UI_Shell_PropertiesSystem",
            "Win32_System_Com",
            "Win32_System_Com_StructuredStorage",
            "Win32_Media_KernelStreaming",
            "Win32_Media_Multimedia",
            "Win32_System_Threading",
            "Win32_System_Variant",
            "Win32_Security",]

[dependencies]
widestring = "1.1.0"
log = "0.4.22"
num-integer = "0.1"
windows-core = "0.61"
thiserror = "2.0.9"

[dev-dependencies]
simplelog = "0.12.2"
rand = "0.8.5"
sysinfo = "0.33.1"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
